[project]
name = "jaxlob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ali-shihab", email = "ali-shihab@outlook.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
jaxlob = "jaxlob:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
