[project]
name = "jaxlob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ali-shihab", email = "ali-shihab@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chex>=0.1.88",
    "flax>=0.10.2",
    "gymnax>=0.0.8",
    "ipykernel>=6.29.5",
    "jax>=0.5.0",
]

[project.scripts]
jaxlob = "jaxlob:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
